[tool.poetry]
name = "ukulele"
version = "0.1.0"
description = ""
authors = ["Yevhenii Hyzyla <hyzyla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
